# goose-api

./: .dockerignore  .env  .env.example  .gitignore  .htaccess  Dockerfile  README.md  cmd.sh  composer.json  connect.php  docker-compose.yml  index.php  install.php  install.py  main.py  pyproject.toml  pytest.ini  requirements.txt  script.sh  server.php  test-script.sh
_legacy/: .dockerignore  .gitignore  Dockerfile  cmd.sh  connect.php  server.php
_legacy/bootstrap/: app.php  route.php
_legacy/controller/: Main.php  intro.php
_legacy/core/: Connect.md  Message.php  Model.php  Router.php
_legacy/resource/: .env.example  db.default.sql  tools.php
api/: main.py
app-manager/: README.md  index.html
bootstrap/: app.php  libs.php  route.php
controller/: Main.php  README.md  error.php  external.php  hello.php  intro.php  manager.php  nest.php  nests.php  token.php
controller/apps/: README.md  (+8 more)
core/: Auth.php  Blade.php  Connect.php  Controller.php  Error.php  File.php  Goose.php  Install.php  Message.php  Model.php  Output.php  Paginate.php  Router.php  String.php  Text.php  Token.php  Util.php
data/: config.php
resource/: .env.example  db.default.sql  default_db.sql  docker-entrypoint.sh  install.php  nginx.bak.conf  nginx.conf  preference.json  route.php  routeMap.php  seed.sql  tools.php
scripts/: docker-entrypoint.sh  install.sh  util.sh
src/: README.md  __init__.py  api.py  output.py  setup.py
tests/: __init__.py  app.py  article.py  auth.py  category.py  checklist.py  comment.py  conftest.py  file.py  home.py  json.py  mix.py  multi.py  nest.py  test_app.py  test_home.py
view/: intro.blade.php
(+304 files in other folders)
