[project]
name = "goose-api"
version = "2.0.0"
description = "Goose CMS API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
