[project]
name = "goose-api"
version = "2.0.5"
description = "Goose CMS API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pillow-avif-plugin>=1.5.2",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "starlette>=0.46.2",
    "toml>=0.10.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
